--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:dev": "webpack --env mode-development",
     "build:prod": "webpack --env mode=production",
-    "start": "webpack serve --env port=3000"
+    "start": "webpack serve --env port=3000",
+    "lint":"eslint --fix"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
   },
   "homepage": "https://github.com/ecolog321/fsd_project#readme",
   "devDependencies": {
+    "@eslint/js": "^9.30.0",
     "@svgr/webpack": "^8.1.0",
     "@types/node": "^24.0.3",
     "@types/react": "^17.0.39",
@@ -29,7 +31,10 @@
     "@types/webpack": "^5.28.5",
     "@types/webpack-dev-server": "^4.7.1",
     "css-loader": "^7.1.2",
+    "eslint": "^9.30.0",
+    "eslint-plugin-react": "^7.37.5",
     "file-loader": "^6.2.0",
+    "globals": "^16.2.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.9.2",
     "sass": "^1.89.2",
@@ -38,13 +43,18 @@
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
+    "typescript-eslint": "^8.35.0",
     "webpack": "^5.99.9",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.2"
   },
   "dependencies": {
+    "i18next": "^25.2.1",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^15.5.3",
     "react-router-dom": "^6.2.1"
   }
 }
