--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build:dev": "webpack --env mode-development",
     "build:prod": "webpack --env mode=production",
     "start": "webpack serve --env port=3000",
-    "lint":"eslint --fix"
+    "lint:ts": "eslint --fix",
+    "lint:scss": "stylelint \"**/*.scss\" --fix"
   },
   "repository": {
     "type": "git",
@@ -40,6 +41,9 @@
     "sass": "^1.89.2",
     "sass-loader": "^16.0.5",
     "style-loader": "^4.0.0",
+    "stylelint": "^16.21.0",
+    "stylelint-config-standard": "^38.0.0",
+    "stylelint-config-standard-scss": "^15.0.1",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
