--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "learning project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "unit": "jest --config ./config/jest/jest.config.ts",
     "build:dev": "webpack --env mode-development",
     "build:prod": "webpack --env mode=production",
     "start": "webpack serve --env port=3000",
@@ -24,7 +25,9 @@
   "homepage": "https://github.com/ecolog321/fsd_project#readme",
   "devDependencies": {
     "@eslint/js": "^9.30.0",
+    "@jest/globals": "^30.0.3",
     "@svgr/webpack": "^8.1.0",
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.0.3",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
@@ -37,6 +40,8 @@
     "file-loader": "^6.2.0",
     "globals": "^16.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^30.0.3",
+    "jest-environment-jsdom": "^30.0.2",
     "mini-css-extract-plugin": "^2.9.2",
     "sass": "^1.89.2",
     "sass-loader": "^16.0.5",
@@ -44,6 +49,7 @@
     "stylelint": "^16.21.0",
     "stylelint-config-standard": "^38.0.0",
     "stylelint-config-standard-scss": "^15.0.1",
+    "ts-jest": "^29.4.0",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
