add testing library, add test for btn & sidebar

--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
   },
   "homepage": "https://github.com/ecolog321/fsd_project#readme",
   "devDependencies": {
+    "@babel/preset-react": "^7.16.7",
     "@eslint/js": "^9.30.0",
     "@jest/globals": "^30.0.3",
     "@svgr/webpack": "^8.1.0",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.3",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.0.3",
     "@types/react": "^17.0.39",
@@ -40,9 +43,11 @@
     "file-loader": "^6.2.0",
     "globals": "^16.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^30.0.3",
     "jest-environment-jsdom": "^30.0.2",
     "mini-css-extract-plugin": "^2.9.2",
+    "regenerator-runtime": "^0.13.9",
     "sass": "^1.89.2",
     "sass-loader": "^16.0.5",
     "style-loader": "^4.0.0",
