--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "build:prod": "webpack --env mode=production",
     "start": "webpack serve --env port=3000",
     "lint:ts": "eslint --fix",
-    "lint:scss": "stylelint \"**/*.scss\" --fix"
+    "lint:scss": "stylelint \"**/*.scss\" --fix",
+    "storybook": "storybook dev -p 6006 -c ./config/.storybook",
+    "build-storybook": "storybook build -c ./config/.storybook"
   },
   "repository": {
     "type": "git",
@@ -27,6 +29,10 @@
     "@babel/preset-react": "^7.16.7",
     "@eslint/js": "^9.30.0",
     "@jest/globals": "^30.0.3",
+    "@storybook/addon-docs": "^9.1.4",
+    "@storybook/addon-onboarding": "^9.1.4",
+    "@storybook/addon-webpack5-compiler-swc": "^4.0.1",
+    "@storybook/react-webpack5": "^9.1.4",
     "@svgr/webpack": "^8.1.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
@@ -40,6 +46,7 @@
     "css-loader": "^7.1.2",
     "eslint": "^9.30.0",
     "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-storybook": "^9.1.4",
     "file-loader": "^6.2.0",
     "globals": "^16.2.0",
     "html-webpack-plugin": "^5.5.0",
@@ -50,6 +57,7 @@
     "regenerator-runtime": "^0.13.9",
     "sass": "^1.89.2",
     "sass-loader": "^16.0.5",
+    "storybook": "^9.1.4",
     "style-loader": "^4.0.0",
     "stylelint": "^16.21.0",
     "stylelint-config-standard": "^38.0.0",
@@ -71,5 +79,10 @@
     "react-dom": "^17.0.2",
     "react-i18next": "^15.5.3",
     "react-router-dom": "^6.2.1"
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:storybook/recommended"
+    ]
   }
 }
