--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint:ts": "eslint --fix",
     "lint:scss": "stylelint \"**/*.scss\" --fix",
     "storybook": "storybook dev -p 6006 -c ./config/.storybook",
-    "build-storybook": "storybook build -c ./config/.storybook",
+    "storybook:build": "storybook build -c ./config/.storybook",
     "chromatic": "npx chromatic --project-token=chpt_ed4532c1c0e0e7f"
   },
   "repository": {
