--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "learning project",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
-    "unit": "jest --config ./config/jest/jest.config.ts",
+    "test:unit": "jest --config ./config/jest/jest.config.ts",
     "build:dev": "webpack --env mode-development",
     "build:prod": "webpack --env mode=production",
     "start": "webpack serve --env port=3000",
