--- a/package.json
+++ b/package.json
@@ -75,15 +75,19 @@
     "webpack-dev-server": "^5.2.2"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.0",
     "i18next": "^25.2.1",
     "i18next-browser-languagedetector": "^8.2.0",
     "i18next-http-backend": "^3.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^15.5.3",
+    "react-redux": "^7.2.9",
     "react-router-dom": "^6.2.1"
   },
   "eslintConfig": {
-    "extends": ["eslint:recommended"]
+    "extends": [
+      "eslint:recommended"
+    ]
   }
 }
