--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test:unit": "jest --config ./config/jest/jest.config.ts",
     "build:dev": "webpack --env mode-development",
     "build:prod": "webpack --env mode=production",
+    "start:dev:server": "node json_server/index.js",
     "start": "webpack serve --env port=3000",
     "lint:ts": "eslint --fix",
     "lint:scss": "stylelint \"**/*.scss\" --fix",
@@ -38,7 +39,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@types/jest": "^30.0.0",
-    "@types/node": "^24.0.3",
+    "@types/node": "^24.5.0",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.3.3",
@@ -56,6 +57,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^30.0.3",
     "jest-environment-jsdom": "^30.0.2",
+    "json-server": "^0.17.4",
     "mini-css-extract-plugin": "^2.9.2",
     "regenerator-runtime": "^0.13.9",
     "sass": "^1.89.2",
