--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build:prod": "webpack --env mode=production",
     "start:dev:server": "node json_server/index.js",
     "start": "webpack serve --env port=3000",
+    "start-dev": "concurrently \"npm:start \" \"npm:start:dev:server\"",
     "lint:ts": "eslint --fix",
     "lint:scss": "stylelint \"**/*.scss\" --fix",
     "storybook": "storybook dev -p 6006 -c ./config/.storybook",
@@ -45,6 +46,7 @@
     "@types/webpack": "^5.28.5",
     "@types/webpack-dev-server": "^4.7.1",
     "chromatic": "^13.1.4",
+    "concurrently": "^9.2.1",
     "css-loader": "^7.1.2",
     "eslint": "^9.35.0",
     "eslint-plugin-react": "^7.37.5",
