--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test:unit": "jest --config ./config/jest/jest.config.ts",
-    "build:dev": "webpack --env mode-development",
+    "build:dev": "webpack --env mode=development",
     "build:prod": "webpack --env mode=production",
     "start:dev:server": "node json_server/index.js",
     "start": "webpack serve --env port=3000",
@@ -47,8 +47,10 @@
     "@types/webpack-dev-server": "^4.7.1",
     "chromatic": "^13.1.4",
     "concurrently": "^9.2.1",
+    "copy-webpack-plugin": "^13.0.1",
     "css-loader": "^7.1.2",
     "eslint": "^9.35.0",
+    "eslint-plugin-i18next": "^6.1.3",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-storybook": "^9.1.8",
