--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "css-loader": "^7.1.2",
     "eslint": "^9.35.0",
     "eslint-plugin-i18next": "^6.1.3",
+    "eslint-plugin-ormina-plugin": "^1.0.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-storybook": "^9.1.8",
@@ -89,7 +90,8 @@
     "react-dom": "^17.0.2",
     "react-i18next": "^15.5.3",
     "react-redux": "^7.2.9",
-    "react-router-dom": "^6.2.1"
+    "react-router-dom": "^6.2.1",
+    "react-virtuoso": "^4.14.1"
   },
   "eslintConfig": {
     "extends": [
