--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:prod": "webpack --env mode=production",
     "start:dev:server": "node json_server/index.js",
     "start": "webpack serve --env port=3000",
-    "start-dev": "concurrently \"npm:start \" \"npm:start:dev:server\"",
+    "start-dev": "concurrently \"npm:start project=dev\" \"npm:start:dev:server\"",
     "lint:ts": "eslint --fix",
     "lint:scss": "stylelint \"**/*.scss\" --fix",
     "storybook": "storybook dev -p 6006 -c ./config/.storybook",
@@ -36,8 +36,10 @@
     "@storybook/addon-webpack5-compiler-swc": "^4.0.1",
     "@storybook/react-webpack5": "^9.1.8",
     "@svgr/webpack": "^8.1.0",
+    "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
+    "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.5.0",
     "@types/react": "^17.0.88",
