--- a/package.json
+++ b/package.json
@@ -40,10 +40,11 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^14.6.1",
+    "@types/babel__core": "^7.20.5",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.5.0",
-    "@types/react": "^17.0.88",
-    "@types/react-dom": "^17.0.11",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "@types/react-router-dom": "^5.3.3",
     "@types/webpack": "^5.28.5",
     "@types/webpack-dev-server": "^4.7.1",
@@ -69,6 +70,7 @@
     "sass": "^1.89.2",
     "sass-loader": "^16.0.5",
     "storybook": "^9.1.8",
+    "storybook-addon-mock": "^6.0.1",
     "style-loader": "^4.0.0",
     "stylelint": "^16.21.0",
     "stylelint-config-standard": "^38.0.0",
@@ -83,16 +85,16 @@
     "webpack-dev-server": "^5.2.2"
   },
   "dependencies": {
-    "@headlessui/react": "^1.6.6",
-    "@reduxjs/toolkit": "^1.8.0",
+    "@headlessui/react": "^2.2.9",
+    "@reduxjs/toolkit": "^2.11.0",
     "axios": "^1.12.2",
     "i18next": "^25.6.0",
     "i18next-browser-languagedetector": "^8.2.0",
     "i18next-http-backend": "^3.0.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-i18next": "^15.5.3",
-    "react-redux": "^7.2.9",
+    "react-redux": "^9.0.0",
     "react-router-dom": "^6.2.1",
     "react-virtuoso": "^4.14.1"
   },
