--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     },
     "ts-node": {
         "compilerOptions": {
+            "skipLibCheck": true,
             "module": "commonjs"
         }
     },
