--- a/package.json
+++ b/package.json
@@ -28,9 +28,12 @@
   },
   "homepage": "https://github.com/ecolog321/fsd_project#readme",
   "devDependencies": {
+    "@babel/core": "^7.28.5",
+    "@babel/preset-env": "^7.28.5",
     "@babel/preset-react": "^7.16.7",
     "@eslint/js": "^9.35.0",
     "@jest/globals": "^30.0.3",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.6.2",
     "@storybook/addon-docs": "^9.1.8",
     "@storybook/addon-onboarding": "^9.1.8",
     "@storybook/addon-webpack5-compiler-swc": "^4.0.1",
@@ -41,6 +44,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^14.6.1",
     "@types/babel__core": "^7.20.5",
+    "@types/circular-dependency-plugin": "^5.0.8",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.5.0",
     "@types/react": "^19.2.7",
@@ -48,6 +52,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/webpack": "^5.28.5",
     "@types/webpack-dev-server": "^4.7.1",
+    "babel-loader": "^10.0.0",
     "chromatic": "^13.1.4",
     "concurrently": "^9.2.1",
     "copy-webpack-plugin": "^13.0.1",
@@ -59,6 +64,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-storybook": "^9.1.8",
     "file-loader": "^6.2.0",
+    "fork-ts-checker-webpack-plugin": "^9.1.0",
     "globals": "^16.2.0",
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
@@ -66,6 +72,7 @@
     "jest-environment-jsdom": "^30.0.2",
     "json-server": "^0.17.4",
     "mini-css-extract-plugin": "^2.9.2",
+    "react-refresh": "^0.18.0",
     "regenerator-runtime": "^0.13.9",
     "sass": "^1.89.2",
     "sass-loader": "^16.0.5",
@@ -80,7 +87,7 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.43.0",
-    "webpack": "^5.99.9",
+    "webpack": "^5.103.0",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.2"
   },
@@ -88,6 +95,7 @@
     "@headlessui/react": "^2.2.9",
     "@reduxjs/toolkit": "^2.11.0",
     "axios": "^1.12.2",
+    "circular-dependency-plugin": "^5.2.2",
     "i18next": "^25.6.0",
     "i18next-browser-languagedetector": "^8.2.0",
     "i18next-http-backend": "^3.0.2",
