--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "i18next-browser-languagedetector": "^8.2.0",
     "i18next-http-backend": "^3.0.2",
     "react": "^19.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^19.2.0",
     "react-i18next": "^15.5.3",
     "react-redux": "^9.0.0",
