add vite and fix some styles

--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "test:unit": "jest --config ./config/jest/jest.config.ts",
     "build:dev": "webpack --env mode=development",
     "build:prod": "webpack --env mode=production",
+    "start:vite": "vite",
     "start:dev:server": "node json_server/index.js",
     "start": "webpack serve --env port=3000",
     "start-dev": "concurrently \"npm:start project=dev\" \"npm:start:dev:server\"",
+    "start-dev:vite": "concurrently \"npm run start:vite\" \"npm:start:dev:server\"",
     "lint:ts": "eslint --fix",
     "lint:scss": "stylelint \"**/*.scss\" --fix",
     "storybook": "storybook dev -p 6006 -c ./config/.storybook",
@@ -52,6 +54,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/webpack": "^5.28.5",
     "@types/webpack-dev-server": "^4.7.1",
+    "@vitejs/plugin-react": "^5.1.2",
     "babel-loader": "^10.0.0",
     "chromatic": "^13.1.4",
     "concurrently": "^9.2.1",
@@ -88,6 +91,8 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.43.0",
+    "vite": "^7.3.1",
+    "vite-plugin-svgr": "^4.5.0",
     "webpack": "^5.103.0",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.2"
